tests/test_assets/semantic/invalid/enums/member_value_type.cog
BadValue :: enum(u8) {
    A = 1.5,
}
