tests/test_assets/semantic/invalid/enums/member_value_type.expected
semantic error at line 2: enum member value must be an integer constant
1 semantic error generated.
